--- a/submission/Makefile
+++ b/submission/Makefile
@@ -1,16 +1,16 @@
 CXX=g++
 
 test: Bin.o Vector3D.o Test.o 
-	$(CXX) Test.o Bin.o Vector3D.o -o test
+	$(CXX) -o test Test.o Bin.o Vector3D.o 
 
 Bin.o: Bin.cpp Bin.h
-	$(CXX) -c Bin.cpp
+	$(CXX) -c -Wall -pedantic Bin.cpp
 
 Vector3D.o: Vector3D.cpp Vector3D.h
-	$(CXX) -c Vector3D.cpp
+	$(CXX) -c -Wall -pedantic Vector3D.cpp
 
 Test.o: Test.cpp TestVector3D.h TestBin.h
-	$(CXX) -c Test.cpp
+	$(CXX) -c -Wall -pedantic Test.cpp
 
 clean: 
 	rm *.o test
